Made significant improvemen to mobile

--- a/public/controls/checkbox_li.html
+++ b/public/controls/checkbox_li.html
@@ -1,6 +1,17 @@
-﻿<div class="row" style="
-    margin-left:40px;
-    margin-top:10px">
-    <img src="images/cb.png" />
-    <span class="p-check-list">{{listItem}}</span>
+﻿<div class="row">
+    <div class="y-offset"></div>
+    <div class="
+         col-xs-2 
+         col-sm-1 col-sm-offset-2
+         col-md-1 col-md-offset-0
+         ">
+        <img src="images/cb.png" />
+    </div>
+    <div class="
+         col-xs-10
+         col-sm-8
+         col-md-11
+         ">
+        <span class="tk-acumin-pro p-check-list">{{listItem}}</span>
+    </div>
 </div>
