--- a/public/index.html
+++ b/public/index.html
@@ -23,13 +23,15 @@
     <script type="text/javascript" src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script type="text/javascript" src="/bower_components/jquery-ui/jquery-ui.min.js"></script>
     <script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="bower_components/threejs/build/three.min.js"></script>
+    <script type="text/javascript" src="/bower_components/threejs/build/three.min.js"></script>
     <script type="text/javascript" src="/bower_components/jquery-color/jquery.color.js"></script>
     <script type="text/javascript" src="/bower_components/ui-router/release/angular-ui-router.min.js"></script>
-    <script type="text/javascript" src="bower_components/toastr/toastr.js"></script>
+    <script type="text/javascript" src="/bower_components/toastr/toastr.js"></script>
     <!-- Font -->
     <script src="https://use.typekit.net/iku0iwr.js"></script>
-    <script>try{Typekit.load({ async: true });}catch(e){}</script>
+    <script>$(function () { Typekit.load({ async: true }); });</script>
+    <!-- Other -->
+    <script src="scripts/ui/resize.js"></script>
 </head>
 <body ng-app="master">
     <div class="wrapper" ng-controller="body as body">
@@ -39,5 +41,6 @@
                  ng-class="{'view-animate': anyVisited>1,'content-template':true }"></div>
         </div>
     </div>
+    <script type="text/javascript" src="/bower_components/responsive-bootstrap-toolkit/dist/bootstrap-toolkit.js"></script>
 </body>
 </html>
