--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link href="/bower_components/normalize-css/normalize.css" rel="stylesheet" />
     <link rel="stylesheet" href="/bower_components/jquery-ui/themes/base/all.css">
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap-theme.css">
