--- a/public/controls/checkbox_li.html
+++ b/public/controls/checkbox_li.html
@@ -1,14 +1,14 @@
 ﻿<div class="row">
     <div class="y-offset"></div>
     <div class="
-         col-xs-2 
+         col-xs-2 col-xs-offset-1
          col-sm-1 col-sm-offset-2
          col-md-1 col-md-offset-0
          ">
         <img src="images/cb.png" />
     </div>
     <div class="
-         col-xs-10
+         col-xs-9
          col-sm-8
          col-md-11
          ">
