--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <!-- Load Models -->
     <script src="scripts/controllers/NavBar.js"></script>
     <script src="scripts/controllers/Product.js"></script>
+    <script src="scripts/controllers/About.js"></script>
     <!-- Load Controller -->
     <script type="text/javascript" src="/scripts/controllers/main.js"></script>
     <script type="text/javascript" src="/bower_components/angular-animate/angular-animate.min.js"></script>
@@ -40,6 +41,13 @@
         <div class="view-animate-container">
             <div ui-view="master"
                  ng-class="{'view-animate': anyVisited>1,'content-template':true }"></div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <p>Like this site? Help yourself to <a href="https://github.com/jmbeach/demosite">the code!</a></p>
+            </div>
         </div>
     </div>
     <script type="text/javascript" src="/bower_components/responsive-bootstrap-toolkit/dist/bootstrap-toolkit.js"></script>
