--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <script src="scripts/controllers/NavBar.js"></script>
     <script src="scripts/controllers/Product.js"></script>
     <script src="scripts/controllers/About.js"></script>
+    <script src="scripts/controllers/TechnologyGenerator.js"></script>
     <!-- Load Controller -->
     <script type="text/javascript" src="/scripts/controllers/main.js"></script>
     <script type="text/javascript" src="/bower_components/angular-animate/angular-animate.min.js"></script>
@@ -44,7 +45,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
+        <div class="row" style="position:fixed;bottom:0">
             <div class="col-md-12">
                 <p>Like this site? Help yourself to <a href="https://github.com/jmbeach/demosite">the code!</a></p>
             </div>
