--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,14 @@
         </div>
     </div>
     <div class="container">
-        <div class="row" style="position:fixed;bottom:0">
+        <div id="footer" class="row" style="position:fixed;bottom:0;background:white;border-left:1px solid gray; border-top: 2px solid black; border-right: 1px solid gray;">
             <div class="col-md-12">
-                <p>Like this site? Help yourself to <a href="https://github.com/jmbeach/demosite">the code!</a></p>
+                <p>
+                    Like this site? Help yourself to <a href="https://github.com/jmbeach/demosite">
+                        the code!
+                        <img src="/bower_components/svg-porn/logos/github-octocat.svg" style="width:7em" />
+                    </a>
+                </p>
             </div>
         </div>
     </div>
